--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -64,8 +64,8 @@ section
 @import "style/nav"
 @import "style/cover"
 @import "style/news"
-@import "style/activities"
 @import "style/events"
+@import "style/campaigns"
 @import "style/communities"
 @import "style/subscription"
 
