--- a/app/views/home/landing.html.slim
+++ b/app/views/home/landing.html.slim
@@ -3,8 +3,8 @@
 .main
   .container-fluid
     = render 'news'
-    = render 'activities'
     = render 'events'
+    = render 'campaigns'
     = render 'communities'
     = render 'subscription'
 
