Added campaigns' photos

--- a/app/assets/stylesheets/style/_campaigns.sass
+++ b/app/assets/stylesheets/style/_campaigns.sass
@@ -140,7 +140,7 @@
         @media screen and (min-width: $screen-sm)
           height: 45vw
 
-        @media screen and (min-width: $screen-sm)
+        @media screen and (min-width: $screen-md)
           height: 380px
 
       @each $name in 'rubytaiwan' 'mokumokukai' 'railsgirlstaipei' 'rubyconftaiwan'
