bower init / bower install jquery-touchswipe / enable carousel swipe on mobile

--- a/app/views/home/_nav.slim
+++ b/app/views/home/_nav.slim
@@ -13,7 +13,7 @@ nav#mainNav.navbar.navbar-default.navbar-custom.navbar-fixed-top
         li
           a.page-scroll href="#news"  =t('section.news')
         li
-          a.page-scroll href="#activities"  =t('section.activities')
+          a.page-scroll href="#events"  =t('section.events')
         li
           a.page-scroll href="#communities"  =t('section.communities')
         li
