--- a/app/views/home/_subscription.slim
+++ b/app/views/home/_subscription.slim
@@ -2,7 +2,7 @@ section#subscription
   h3.section-title =t('section.subscription')
 
   .subscription.input-group
-    input.form-control placeholder=t('helper.placeholder') type="text" /
+    input.form-control placeholder=t('helper.placeholder') type="email" /
     span.input-group-btn
       button.btn type="button"
         =t('helper.subscription')
