--- a/app/assets/stylesheets/style/_news.sass
+++ b/app/assets/stylesheets/style/_news.sass
@@ -3,7 +3,7 @@
 
   .news-card
     background-color: #fff
-    box-shadow: 0 2px 4px 0 rgba(50,50,50,0.50)
+    box-shadow: 0 2px 4px 0 rgba($deep-grey,0.50)
     padding: 60px 20px
     @extend .flexbox
 
