--- a/app/assets/stylesheets/style/_subscription.sass
+++ b/app/assets/stylesheets/style/_subscription.sass
@@ -1,8 +1,31 @@
 #subscription
+  max-width: inherit
+  padding-left: 30px
+  padding-right: 30px
+  margin: 0 -15px
+  background: $red image-url("geometric_background") repeat top left
+  box-shadow: 0 2px 4px 0 rgba(#000,0.5)
+
+  @media screen and (min-width: $screen-sm)
+    margin: 0 -50px
+
+  .section-title
+    color: #fff
+    margin-bottom: 0
+
+  svg
+    position: absolute
+    height: 22px
+    left: 50%
+    +transform(translateX(-50%))
+  
+    #icon_ruby
+      fill: #fff
 
   .subscription
-    margin: 0 auto
+    margin: 60px auto 0
     display: block
+    box-shadow: 0 2px 4px 0 rgba($deep-grey, 0.5)
 
     @media screen and (min-width: $screen-sm)
       display: tables
@@ -10,40 +33,34 @@
 
     .form-control
       color: $deep-grey
+      +size(100%, 50px)
       background-color: #fff
       border-width: 0px
-      border-bottom: 2.5px solid $red
-      box-shadow: 0 2px 4px 0 rgba($deep-grey, 0.5)
-      border-radius: 0px
+      border-radius: 4px 4px 0 0
       padding: 0 0 0 15px
-      float: none
-      +size(100%, 50px)
 
       &:focus
-        border-color: $red
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba($red, 0.6)
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0), 0 0 8px rgba($red, 0)
 
       @media screen and (min-width: $screen-sm)
         float: left
-        width: 400px
+        width: 360px
+        border-radius: 4px 0 0 4px
 
     .input-group-btn button
       color: #fff
       font-size: 18px
-
       +size(100%, 50px)
-      float: none
       background-color: $red
-      box-shadow: 0 2px 4px 0 rgba($deep-grey, 0.5)
-      border-radius: 0px
-      margin: 10px 0 0
-
+      border-radius: 0 0 4px 4px
+      border: 5px solid #fff
+      margin-left: 0
       +transition(background-color, 0.3s)
 
       @media screen and (min-width: $screen-sm)
-        +size(80px, 50px)
         float: left
-        margin: 0
+        width: 120px
+        border-radius: 0 4px 4px 0
 
       &:hover
         background-color: $red - #111
