--- a/app/assets/stylesheets/style/_events.sass
+++ b/app/assets/stylesheets/style/_events.sass
@@ -4,6 +4,11 @@
     @extend .flexbox
     justify-content: center
 
+    .event-empty
+      font-size: 20px
+      color: $warm-grey
+      margin-top: 30px
+
     .event-card
       position: relative
       width: 100%
@@ -22,7 +27,7 @@
         width: 100%
 
       .event-info
-        padding: 0 20px 90px
+        padding: 0 20px
 
         .event-date
           color: #fff
@@ -52,31 +57,39 @@
           &:hover
             color: $red
 
-        .event-location
+        .event-location, .event-time
           font-size: 15px
           color: $warm-grey
-          padding: 5px 0 20px
 
           i, p
             display: inline
             padding-right: 5px
 
+          &.event-location
+            padding-top: 5px
+
         .event-desc
           font-size: 14px
           line-height: 1.6
           color: $dark-grey
+          margin: 20px 0 80px
 
-        .button-apply
-          @extend .button-more
-          position: absolute
-          +transform(translateX(-50%))
-          left: 50%
-          bottom: 30px
+      .button-apply
+        color: $red
+        font-size: 15px
+        text-align: center
+        position: absolute
+        width: 100%
+        bottom: 0
+        border-top: 1px solid $red
+        padding: 15px 0
+        +transition(background, 0.3s)
 
-          color: $red
-          border: solid 1px $red
+        &:hover
+          color: #fff
+          background-color: $red
 
-          &:hover
-            color: #fff
-            background: $red
-            border-color: $red
+  .button-more:hover
+    color: #fff
+    background: $dark-grey
+    border-color: $dark-grey
