--- a/app/assets/stylesheets/style/_events.sass
+++ b/app/assets/stylesheets/style/_events.sass
@@ -23,26 +23,52 @@
       @media screen and (min-width: $screen-md)
         width: calc(100%/3 - 20px)
 
+      &.ended
+        display: none
+
       .event-photo
-        width: 100%
+        position: relative
+        overflow: hidden
+        height: 200px
+        background: $warm-grey url(asset-path("default_cover.svg")) no-repeat center center
+        background-size: 150px 150px
+
+        @media screen and (min-width: $screen-sm)
+          height: 240px
+
+        @media screen and (min-width: $screen-md)
+          height: 200px
+
+        img
+          width: 100%
+          position: absolute
+          +transform(translateX(-50%) translateY(-50%))
+          top: 50%
+          left: 50%
 
       .event-info
-        padding: 0 20px
+        position: relative
+        padding: 30px 20px
 
         .event-date
           color: #fff
           font-size: 14px
           font-weight: 300
           text-align: center
-          line-height: 27px
-          letter-spacing: 1px
-
-          +size(120px,27px)
+          line-height: 30px
+          letter-spacing: 2px
+          position: absolute
+          +size(150px, 30px)
           border-radius: 100px
           background-color: $red
           box-shadow: 0 2px 4px 0 rgba($deep-grey, 0.5)
-          +transform(translateY(-50%))
+          +transform(translateX(-50%))
+          top: -15px
+          left: 50%
           margin: 0 auto
+
+          &.period
+            width: 180px
 
         .event-title
           color: $deep-grey
@@ -50,12 +76,13 @@
           font-weight: 500
           
           display: block
-          margin: 15px 0 20px
+          min-height: 45px
+          margin: 5px 0 20px
 
           +transition(color, 0.3s)
 
-          &:hover
-            color: $red
+        a.event-title:hover
+          color: $red
 
         .event-location, .event-time
           font-size: 15px
@@ -72,24 +99,34 @@
           font-size: 14px
           line-height: 1.6
           color: $dark-grey
-          margin: 20px 0 80px
+          margin: 20px 0 50px
 
       .button-apply
-        color: $red
+        color: $warm-grey
         font-size: 15px
         text-align: center
         position: absolute
         width: 100%
         bottom: 0
-        border-top: 1px solid $red
+        border-top: 1px solid $warm-grey
         padding: 15px 0
         +transition(background, 0.3s)
 
-        &:hover
-          color: #fff
-          background-color: $red
+        &.active
+          color: $red
+          border-top: 1px solid $red
 
-  .button-more:hover
-    color: #fff
-    background: $dark-grey
-    border-color: $dark-grey
+          &:hover
+            color: #fff
+            background-color: $red
+
+  .button-more
+    width: 150px
+
+    &:visited
+      color: $dark-grey
+  
+    &:hover, &.active
+      color: #fff
+      background: $dark-grey
+      border-color: $dark-grey
