--- a/app/views/admin/events/_form.html.slim
+++ b/app/views/admin/events/_form.html.slim
@@ -5,7 +5,7 @@
 
   main.content
     = fae_input f, :title, label: '活動名稱'
-    = fae_datepicker f, :date_of_event, label: '活動日期'
+    = fae_daterange f, [:start_date, :end_date], label: '活動日期'
     = fae_input f, :location, label: '活動地點'
     = fae_input f, :start_time, label: '開始時間'
     = fae_input f, :end_time, label: '結束時間'
