updated Communities section on the front page

--- a/app/assets/stylesheets/base/_styleguide.sass
+++ b/app/assets/stylesheets/base/_styleguide.sass
@@ -26,9 +26,10 @@ section
   justify-content: space-around
 
 .align-center
-  position: relative
+  position: absolute
   top: 50%
-  +transform(translateY(-50%))
+  left: 50%
+  +transform(translateX(-50%) translateY(-50%))
 
 /* Media queries breakpoints */
 $screen-xs: 480px !default
