--- a/app/views/admin/events/_form.html.slim
+++ b/app/views/admin/events/_form.html.slim
@@ -9,7 +9,7 @@
     = fae_input f, :location, label: '活動地點'
     = fae_input f, :start_time, label: '開始時間'
     = fae_input f, :end_time, label: '結束時間'
-    = fae_input f, :description, html: true, label: '活動簡介'
+    = fae_input f, :description, label: '活動簡介'
     = fae_radio f, :need_apply, type: 'inline', label: '是否報名'
     = fae_input f, :apply_link, label: '報名網址'
     = fae_radio f, :active, type: 'inline', label: '活動進行中'
