--- a/app/assets/stylesheets/style/_campaigns.sass
+++ b/app/assets/stylesheets/style/_campaigns.sass
@@ -1,5 +1,9 @@
 #campaigns
   padding-top: 0
+
+  @media screen and (min-width: $screen-sm)
+    padding-left: 60px
+    padding-right: 60px
   
   .campaign-card
     @extend .flexbox
