--- a/app/assets/stylesheets/style/_communities.sass
+++ b/app/assets/stylesheets/style/_communities.sass
@@ -4,7 +4,8 @@
   margin: 0 -15px
 
   @media screen and (min-width: $screen-sm)
-    margin: 0 -50px
+    padding-left: 60px
+    padding-right: 60px
   
   .communities
     max-width: 1020px
@@ -14,45 +15,43 @@
     @media screen and (min-width: $screen-sm)
       justify-content: flex-start
 
-    .community-card
+    .community
       width: calc(100% - 40px)
-      min-height: 160px
+      min-height: 180px
+      +transition(all, 0.3s)
       padding: 15px
 
-      @-moz-document url-prefix()
-        height: 160px
-
-      +transition(all, 0.3s)
-
       @media screen and (min-width: $screen-sm)
-        width: 50%
-
-      @media screen and (min-width: $screen-md)
         width: calc(100%/3)
 
       &.even
         background-color: $light-grey
 
-        .community-info
-          border: solid 1px #fff
+        .community-card
+          border: 1px solid #fff
 
-      &.odd .community-info
-        border: solid 1px $light-grey
-
+      &.odd .community-card
+        border: 1px solid $light-grey
+        
       &.even:hover, &.odd:hover
         background-color: $red
 
         .community-info
           color: #fff
 
-      .community-info
-        color: $deep-grey
-        font-size: 20px
-        text-align: center
+      .community-card
+        position: relative
         display: block
-        +size(100%,100%)
-        padding: 30px
+        width: 100%
+        height: 150px
 
-        i
-          display: block
-          margin-top: 10px
+        .community-info
+          color: $deep-grey
+          font-size: 20px
+          text-align: center
+          @extend .align-center
+          width: calc(100% - 40px)
+
+          i
+            display: block
+            margin-top: 10px
