--- a/app/assets/stylesheets/style/_events.sass
+++ b/app/assets/stylesheets/style/_events.sass
@@ -1,4 +1,7 @@
 #events
+  @media screen and (min-width: $screen-sm)
+    padding-left: 60px
+    padding-right: 60px
 
   .events-list
     @extend .flexbox
