--- a/app/assets/stylesheets/style/_cover.sass
+++ b/app/assets/stylesheets/style/_cover.sass
@@ -137,51 +137,51 @@
 
     /** Animation Section **/
 
-    @-webkit-keyframes slide-in
-      0%
-        -webkit-transform: translateY(-600px) rotateX(-30deg) scale(0)
-        -webkit-transform-origin: 50% 100%
-        opacity: 0
+    // @-webkit-keyframes slide-in
+    //   0%
+    //     -webkit-transform: translateY(-600px) rotateX(-30deg) scale(0)
+    //     -webkit-transform-origin: 50% 100%
+    //     opacity: 0
 
-      100%
-        -webkit-transform: translateY(0) rotateX(0) scale(1)
-        -webkit-transform-origin: 50% 1400px
-        opacity: 1
+    //   100%
+    //     -webkit-transform: translateY(0) rotateX(0) scale(1)
+    //     -webkit-transform-origin: 50% 1400px
+    //     opacity: 1
 
-    @keyframes slide-in
-      0%
-        transform: translateY(-600px) rotateX(-30deg) scale(0)
-        transform-origin: 50% 100%
-        opacity: 0
+    // @keyframes slide-in
+    //   0%
+    //     transform: translateY(-600px) rotateX(-30deg) scale(0)
+    //     transform-origin: 50% 100%
+    //     opacity: 0
 
-      100%
-        transform: translateY(0) rotateX(0) scale(1)
-        transform-origin: 50% 1400px
-        opacity: 1
+    //   100%
+    //     transform: translateY(0) rotateX(0) scale(1)
+    //     transform-origin: 50% 1400px
+    //     opacity: 1
 
-    @-webkit-keyframes tracking-in-expand
-      0%
-        letter-spacing: -0.5em
-        opacity: 0
+    // @-webkit-keyframes tracking-in-expand
+    //   0%
+    //     letter-spacing: -0.5em
+    //     opacity: 0
 
-      40%
-        opacity: 0.6
+    //   40%
+    //     opacity: 0.6
 
-      100%
-        letter-spacing: 1px
-        opacity: 1
+    //   100%
+    //     letter-spacing: 1px
+    //     opacity: 1
 
-    @keyframes tracking-in-expand
-      0%
-        letter-spacing: -0.5em
-        opacity: 0
+    // @keyframes tracking-in-expand
+    //   0%
+    //     letter-spacing: -0.5em
+    //     opacity: 0
 
-      40%
-        opacity: 0.6
+    //   40%
+    //     opacity: 0.6
 
-      100%
-        letter-spacing: 1px
-        opacity: 1
+    //   100%
+    //     letter-spacing: 1px
+    //     opacity: 1
 
     @-webkit-keyframes fade-in
       0%
@@ -200,8 +200,8 @@
     /** Animation END **/
 
     .ruby_taiwan_logo
-      -webkit-animation: slide-in 1s ease-out
-      animation: slide-in 1s ease-out
+      -webkit-animation: fade-in 1s ease-out
+      animation: fade-in 1s ease-out
 
       #ruby_taiwan_logo
         +transform(translateX(-50%))
@@ -218,8 +218,8 @@
           top: 100px
       
     .ruby_taiwan_logotype
-      -webkit-animation: slide-in 1.5s ease-out
-      animation: slide-in 1.5s ease-out
+      -webkit-animation: fade-in 1.5s ease-out
+      animation: fade-in 1.5s ease-out
 
       #ruby_taiwan_logotype
         +transform(translateX(-50%))
@@ -246,8 +246,8 @@
       left: 50%
       opacity: 0
       
-      -webkit-animation: tracking-in-expand 1s ease-in-out 1.2s
-      animation: tracking-in-expand 1s ease-in-out 1.2s
+      -webkit-animation: fade-in 1s ease-in-out
+      animation: fade-in 1s ease-in-out
       animation-fill-mode: forwards
 
       @media screen and (min-width: $screen-sm)
@@ -272,8 +272,8 @@
         opacity: 0
         +transition(color, 0.3s)
 
-        -webkit-animation: fade-in 1s ease-in-out 1.2s
-        animation: fade-in 1s ease-in-out 1.2s
+        -webkit-animation: fade-in 1s ease-in-out
+        animation: fade-in 1s ease-in-out
         animation-fill-mode: forwards
 
         @media screen and (min-width: $screen-sm)
