--- a/app/views/admin/events/index.html.slim
+++ b/app/views/admin/events/index.html.slim
@@ -4,7 +4,7 @@ main.content
   table.js-sort-column
     thead
       tr
-        th.-action-wide 編號
+        th.-action-wide data-sorter="false" 編號
         th data-sorter="false" 封面照片
         th 活動名稱
         th 活動日期
