--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -30,6 +30,7 @@ section
   font-size: 14px
   text-align: center
   color: $dark-grey
+  background: transparent
 
   display: block
   border-radius: 4px
@@ -39,9 +40,16 @@ section
   
   +transition(all, 0.3s)
 
-  &:hover
-    color: $red
-    border-color: $red
+  &:hover, &.active
+    color: #fff
+    background: $dark-grey
+    border-color: $dark-grey
+
+  &:focus
+    outline: none
+
+  &:visited
+    color: $dark-grey
 
 .section-title
   font-size: 24px
