--- a/app/views/admin/blogs/index.html.slim
+++ b/app/views/admin/blogs/index.html.slim
@@ -4,11 +4,11 @@ main.content
   table.js-sort-column
     thead
       tr
-        th.-action-wide 編號
+        th.-action-wide data-sorter="false" 編號
         th data-sorter="false" 封面照片
         th 標題
         th 日期
-        th 顯示於首頁
+        th 發佈於首頁
         th.-action-wide 更新時間
         th.-action data-sorter="false"
 
@@ -19,7 +19,7 @@ main.content
             td = index + 1
             td = fae_index_image item.cover_image, edit_admin_blog_path(item)
             td = link_to item.fae_display_field, edit_admin_blog_path(item)
-            td = item.date_of_news.strftime("%b %m, %Y")
+            td = item.date_of_news.strftime("%Y.%m.%d")
             td = fae_toggle item, :active
             td = item.updated_at.strftime("%Y-%m-%d at %H:%M")
             td = fae_delete_button item
