--- a/app/views/admin/communities/index.html.slim
+++ b/app/views/admin/communities/index.html.slim
@@ -4,7 +4,7 @@ main.content
   table.js-sort-column
     thead
       tr
-        th.-action-wide 編號
+        th.-action-wide data-sorter="false" 編號
         th 社群名稱
         th 社群類別
         th 顯示於首頁
