--- a/app/views/home/_events.slim
+++ b/app/views/home/_events.slim
@@ -3,6 +3,9 @@ section#events
 
   .events-list
     - if @events.present?
+      - if @events_active.blank?
+        span.event-empty
+          =t('helper.empty_events')
       - @events.each do |event|
         .event-card class="#{event.active ? '' : 'ended'}"
           .event-photo
@@ -32,7 +35,7 @@ section#events
               i.fa.fa-map-marker aria-hidden="true"
               p = event.location
             p.event-desc = event.description
-          - if event.active && event.need_apply?
+          - if event.active && event.need_apply
             = link_to event.apply_link, target: :_blank, class:'button-apply active' do
               =t('helper.apply_now')
           - elsif event.active.blank?
@@ -46,5 +49,5 @@ section#events
       span.event-empty
         =t('helper.empty_events')
 
-  a.button-more.events-more href="#"
-    =t('helper.order_events')
+  - if @events_ended.present?
+    button.button-more.events-more =t('helper.order_events')
