--- a/app/views/home/_news.slim
+++ b/app/views/home/_news.slim
@@ -4,22 +4,22 @@ section#news
     
     .news-list
       - if @blogs.present?
-        - @blogs.each do |news|
-          .news
-            span.news-date = news.date_of_news.strftime("%b %m %Y")
-            a.news-title href="#" data-modal="news-#{news.id}" = news.title
+        - @blogs.each_with_index do |news, index|
+          .news class="#{index < 5 ? '' : 'more'}"
+            span.news-date = news.date_of_news.strftime("%b %d %Y")
+            h2.news-title data-modal="news-#{news.id}" = news.title
             .news-modal id="news-#{news.id}"
               .modal-sandbox
               .modal-box
                 .modal-close aria-label="Close"
                 - if news.cover_image.asset?
-                .cover-image
-                  = image_tag news.cover_image.asset.url, title: news.title, alt: news.cover_image.alt, class: "news-cover"
+                  .cover-image
+                    = image_tag news.cover_image.asset.url, title: news.title, alt: news.cover_image.alt, class: "news-cover"
                 .content
-                  span.content-date = news.date_of_news.strftime("%b %m, %Y")
+                  span.content-date = news.date_of_news.strftime("%b %d, %Y")
                   h1.content-title = news.title
                   = inline_svg 'icon_ruby.svg'
                   = markdown(news.content)
-
-    a.button-more href="#"
-      =t('helper.view_more')
+    
+    - if @blogs.length >= 5
+      button.button-more.news-more =t('helper.view_more')
